# game-client-terrain

./: Cargo.toml
resources/: viking_room - Copy.png~
shaders/: compile.bat  shader.frag  shader.vert  text-shader.frag  text-shader.vert
src/: backup.rs  controlls.rs  core.rs  graphics.rs  main.rs  terrain.rs
src/controlls/: input_manager.rs
src/core/: app.rs  app_data.rs  collider.rs  collision.rs  game_object.rs  math_functions.rs  matrix_functions.rs  model.rs  quaternion_shared.rs  simplex.rs  transform.rs  trigonometry_shared.rs
src/graphics/: buffers.rs  command_buffers.rs  command_pool.rs  depth_objects.rs  descriptors.rs  font_data.rs  framebuffers.rs  instance.rs  logical_device.rs  model_data.rs  models.rs  physical_device.rs  pipeline.rs  queue_family_indices.rs  shared_buffers.rs  shared_images.rs  shared_textures.rs  single_time_commands.rs  swapchain.rs  swapchain_support.rs  sync_objects.rs  text_object.rs  text_pipeline.rs  text_textures.rs  texture_samplers.rs  textures.rs  texturing_shared.rs  uniform_buffer_object.rs  vertex.rs
src/player/: player_data.rs
src/terrain/: buffer_manager.rs  chunk.rs  chunk_coord.rs  chunk_render_data.rs  constants.rs  direction_map.rs  face_direction.rs  mesh_data.rs  perlin_noise.rs  types.rs  voxel.rs  world.rs
src/terrain/chunk/: chunk_mesh.rs
src/terrain/voxel/: voxel_face.rs  voxel_face_direction.rs  voxel_mesh.rs  voxel_position.rs  voxel_type.rs  voxel_types.rs
