[package]
name = "Learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "^0.8", features = ["v4"] }
serde = { version = "^1", features = ["derive"] }
aws-config = "^0.8"
aws-sdk-dynamodb = "^0.8"
env_logger = "0.8"
log = "^0.4"
strum_macros = "^0.24"
strum = { version = "^0.24", features = ["derive"] }
derive_more = "^0.99"
anyhow = "1"
lazy_static = "1"
nalgebra-glm = "0.17"
pretty_env_logger = "0.4"
thiserror = "1"
tobj = { version = "3", features = ["log"] }
vulkanalia = { version = "=0.16.0", features = ["libloading", "window"] }
winit = "0.27"
enigo = "0.0.14"
chrono = "0.4.23"
noise = "0.8.2"
rand = "0.8.5"
glob = "0.3.0"
unicode-normalization = "0.1.22"
rusttype = "0.9.3"
image = "0.24.5"
nsvg = "0.5.1"
rectangle-pack = "0.4.2"
rect_packer = "0.2.1"
png = "0.17.8"
fontdue = "0.7.3"
ttf-parser = "0.19.0"
crossbeam = "0.8.2"
crossbeam-channel = "0.5.8"
tokio = { version = "1.28.2", features = ["full"] }

#[package]
#name = "Learning"
#version = "0.1.0"
#edition = "2021"
#
## See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
#[dependencies]
#uuid = { version = "^0.8", features = ["v4"] }
#serde = { version = "^1", features = ["derive"] }
#aws-config = "^0.8"
#aws-sdk-dynamodb = "^0.8"
#env_logger = "0.8"
#log = "^0.4"
#strum_macros = "^0.24"
#strum = { version = "^0.24", features = ["derive"] }
#derive_more = "^0.99"
#anyhow = "1"
#lazy_static = "1"
#nalgebra-glm = "0.17"
#pretty_env_logger = "0.4"
#thiserror = "1"
#tobj = { version = "3", features = ["log"] }
#vulkanalia = { version = "=0.16.0", features = ["libloading", "window"] }
#winit = "0.27"
#enigo = "0.0.14"
#chrono = "0.4.23"
#noise = "0.8.2"
#rand = "0.8.5"
#glob = "0.3.0"
#unicode-normalization = "0.1.22"
#rusttype = "0.9.3"
#image = "0.24.5"
#nsvg = "0.5.1"
#rectangle-pack = "0.4.2"
#rect_packer = "0.2.1"
#png = "0.17.8"
#fontdue = "0.7.3"
#ttf-parser = "0.19.0"
#crossbeam = "0.8.2"
#crossbeam-channel = "0.5.8"
#tokio = { version = "1.28.2", features = ["full"] }
